# aes256ctr_poly1305aes

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml  release.toml
.github/: renovate.json
.github/workflows/: audit.yml  ci.yml  cross-ci.yml  release-ci.yml  release-pr.yml  tests.yaml  triage.yml
src/: cipher.rs  lib.rs
