[package]
name = "aes256ctr_poly1305aes"
version = "0.2.0"
authors = ["Alexander Weiss"]
categories = ["cryptography", "no-std"]
documentation = "https://docs.rs/aes256ctr-poly1305aes"
edition = "2021"
keywords = ["aead", "aes256ctr", "aes", "poly1305"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/rustic-rs/aes256ctr_poly1305aes"
rust-version = "1.60.0"
description = """
Pure Rust implementation of the AES256CTR-Poly1305AES Authenticated Encryption
with optional architecture-specific hardware acceleration.
"""

[dependencies]
aead = { version = "0.5", default-features = false }
aes = { version = "0.8" }
cipher = "0.4"
ctr = "0.9"
poly1305 = "0.8"
subtle = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false }

[dev-dependencies]
aead = { version = "0.5", features = ["dev"], default-features = false }

[features]
default = ["alloc"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
heapless = ["aead/heapless"]
stream = ["aead/stream"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items", "--generate-link-to-definition"]
